--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "com.bearya.mobile.car"
         minSdk 21
         targetSdk 31
-        versionCode 10
-        versionName "1.1.0"
+        versionCode 14
+        versionName "1.1.4"
         buildFeatures {
             viewBinding true
         }
@@ -29,9 +29,16 @@ android {
         }
     }
     buildTypes {
+        debug {
+            signingConfig signingConfigs.config
+            minifyEnabled false
+            buildConfigField "String", "ApiUrl", BASE_URL
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
         release {
             signingConfig signingConfigs.config
             minifyEnabled false
+            buildConfigField "String", "ApiUrl", BASE_URL
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -54,10 +61,8 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_version"
+    implementation libs.bundles.kotlin
+    implementation libs.bundles.retrofit
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
@@ -74,6 +79,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
 
@@ -83,5 +89,5 @@ dependencies {
     implementation 'com.kaopiz:kprogresshud:1.2.0'
     implementation 'io.github.razerdp:BasePopup:3.1.8'
     implementation 'com.tencent.bugly:crashreport:3.4.4'
-
+    implementation 'com.github.kelinZhou:ApkUpdater:3.1.0'
 }
