fix : 修复部分机型因为依赖的第三方库引入的多余活动导致的错误

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,19 @@
         tools:targetApi="N">
 
         <activity
+            android:name="com.vmadalin.easypermissions.components.TestActivity"
+            tools:node="remove"
+            tools:ignore="MissingClass" />
+        <activity
+            android:name="com.vmadalin.easypermissions.components.TestAppCompatActivity"
+            tools:node="remove"
+            tools:ignore="MissingClass" />
+        <activity
+            android:name="com.vmadalin.easypermissions.components.TestSupportFragmentActivity"
+            tools:node="remove"
+            tools:ignore="MissingClass" />
+
+        <activity
             android:name=".activity.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait">
