add : 新增设备轮子速度控制

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,8 +68,16 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activity.ControllerActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+
         <activity
             android:name=".activity.EmotionActivity"
+            android:exported="true"
+            android:screenOrientation="landscape" />
+
+        <activity android:name=".activity.SpeedActivity"
             android:exported="true"
             android:screenOrientation="landscape" />
 
