fix: ble unbind then rebind error

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "com.bearya.mobile.car"
         minSdk 21
         targetSdk 31
-        versionCode 230
-        versionName "2.3.0"
+        versionCode 232
+        versionName "2.3.2"
         buildFeatures {
             viewBinding true
         }
@@ -77,13 +77,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
 
     implementation 'com.airbnb.android:lottie:4.2.2'
     implementation 'com.vise.xiaoyaoyou:baseble:2.0.6'
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.6'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
     implementation 'com.kaopiz:kprogresshud:1.2.0'
     implementation 'io.github.razerdp:BasePopup:3.2.0'
     implementation 'com.github.kelinZhou:ApkUpdater:3.1.0'
