--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
     <!--  bug test permission end  -->
 
     <!--不弹出通知栏权限-->
-    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION"/>
+    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
     <!--DownloadManager-->
-    <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER"/>
+    <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
     <!--获取网络状态权限-->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!--APK安装权限-->
-    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -47,16 +47,16 @@
 
         <activity
             android:name="com.vmadalin.easypermissions.components.TestActivity"
-            tools:node="remove"
-            tools:ignore="MissingClass" />
+            tools:ignore="MissingClass"
+            tools:node="remove" />
         <activity
             android:name="com.vmadalin.easypermissions.components.TestAppCompatActivity"
-            tools:node="remove"
-            tools:ignore="MissingClass" />
+            tools:ignore="MissingClass"
+            tools:node="remove" />
         <activity
             android:name="com.vmadalin.easypermissions.components.TestSupportFragmentActivity"
-            tools:node="remove"
-            tools:ignore="MissingClass" />
+            tools:ignore="MissingClass"
+            tools:node="remove" />
 
         <activity
             android:name=".activity.MainActivity"
@@ -68,23 +68,29 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.ControllerActivity"
+        <activity
+            android:name=".activity.ControllerActivity"
             android:exported="true"
-            android:screenOrientation="portrait"/>
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".activity.EmotionActivity"
             android:exported="true"
+            android:launchMode="singleTop"
             android:screenOrientation="landscape" />
 
-        <activity android:name=".activity.SpeedActivity"
+        <activity
+            android:name=".activity.SpeedActivity"
             android:exported="true"
+            android:launchMode="singleTop"
             android:screenOrientation="landscape" />
-        <activity android:name=".activity.CardActivity"
-            android:exported="true"
-            android:screenOrientation="landscape" >
 
-        </activity>
+        <activity
+            android:name=".activity.CardActivity"
+            android:exported="true"
+            android:launchMode="singleTop"
+            android:screenOrientation="landscape" />
 
         <!--版本更新服务-->
         <service android:name="com.kelin.apkUpdater.DownloadService" />
