--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,11 +38,11 @@
         android:name="com.bearya.mobile.car.App"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher_robot"
-        android:label="@string/app_name"
+        android:label="${appName}"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/Theme.Car"
-        tools:replace="android:allowBackup"
+        tools:replace="android:allowBackup,android:label"
         tools:targetApi="N">
 
         <activity
